tests/integration/error/duplicate_parameter.alo
// expect-error: Duplicate parameter declaration: 'value'

fun duplicate(value: int, value: int) -> int {
    return value;
}

fun main() -> void {
    duplicate(1, 2);
}
